--- a/index.html
+++ b/index.html
@@ -401,6 +401,88 @@
     </div>
   </div>
 </section>
+<!-- gallery -->
+<section class="setup-section text-center">
+  <p class="setup-small-text">Share your setup with</p>
+  <h2 class="setup-heading">#FuniroFurniture</h2>
+
+  <div class="gallery-flex">
+    
+    <div class="gallery-col align-bottom">
+      <img src="assetes/img1.png" style="height: 350px;">
+      <img src="assetes/img6.png" style="height: 300px;">
+    </div>
+
+    <div class="gallery-col align-bottom">
+      <img src="assetes/img2.png" style="height: 250px;">
+      <img src="assetes/img7.png" style="height: 200px;">
+    </div>
+
+    <div class="gallery-col" style="justify-content: center;">
+      <img src="assetes/img3.png" class="center-img">
+    </div>
+
+    <div class="gallery-col align-top">
+      <img src="assetes/img4.png" style="height: 250px;">
+      <img src="assetes/img8.png" style="height: 200px;">
+    </div>
+
+    <div class="gallery-col align-top">
+      <img src="assetes/img5.png" style="height: 380px;">
+      <img src="assetes/img9.png" style="height: 150px;">
+    </div>
+
+  </div>
+</section>
+<!-- footer -->
+ <footer class="main-footer">
+  <div class="container">
+    <div class="row">
+      
+      <div class="col-lg-3 col-md-6 mb-5">
+        <h2 class="footer-brand">Furniro.</h2>
+        <p class="footer-address">
+          400 University Drive Suite 200 Coral Gables, <br>
+          FL 33134 USA
+        </p>
+      </div>
+
+      <div class="col-lg-2 col-md-6 mb-5">
+        <p class="footer-heading">Links</p>
+        <ul class="footer-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Shop</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="col-lg-3 col-md-6 mb-5">
+        <p class="footer-heading">Help</p>
+        <ul class="footer-links">
+          <li><a href="#">Payment Options</a></li>
+          <li><a href="#">Returns</a></li>
+          <li><a href="#">Privacy Policies</a></li>
+        </ul>
+      </div>
+
+      <div class="col-lg-4 col-md-6 mb-5">
+        <p class="footer-heading">Newsletter</p>
+        <div class="d-flex flex-wrap">
+          <input type="email" class="newsletter-input" placeholder="Enter Your Email Address">
+          <button class="newsletter-btn">Subscribe</button>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-12 footer-bottom">
+        <p>2023 furino. All rights reserved</p>
+      </div>
+    </div>
+  </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
